# imd-apple-services

./: .gitignore  CMakeLists.txt  CoreFoundation.lib  README.md  dub.json  dub.selections.json
cmake/cmake-d/cmake-d/Platform/: Windows-DigitalMars.cmake  Windows-LDC.cmake
source/: app.d  corefoundation.d  darwin.d  dyldlibrary.d  symbols.d  windows_trampoline.c
source/CoreFoundation/: CFArray.d  CFAttributedString.d  CFAvailability.d  CFBag.d  CFBase.d  CFBinaryHeap.d  CFBitVector.d  CFBundle.d  CFBundlePriv.d  CFByteOrder.d  CFCalendar.d  CFCharacterSet.d  CFCharacterSetPriv.d  CFData.d  CFDate.d  CFDateComponents.d  CFDateFormatter.d  CFDateInterval.d  CFDateIntervalFormatter.d  CFDictionary.d  CFError.d  CFKnownLocations.d  CFLocale.d  CFLocaleInternal.d  CFLogUtilities.d  CFMachPort.d  CFMessagePort.d  CFNotificationCenter.d  CFNumber.d  CFNumberFormatter.d  CFPlugIn.d  CFPreferences.d  CFPriv.d  CFPropertyList.d  CFRegularExpression.d  CFRunArray.d  CFRunLoop.d  CFRuntime.d  CFSet.d  CFSocket.d  (+19 more)
source/fake/: c.d  diskarbitration.d  iokit.d  windows_stubs.d
